# pod2wiki

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL-FOR-AI.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: pod2wiki.md
.github/workflows/: podcast-lint.yml
examples/: config.ai-investing.yaml  sample-transcript.md
scripts/: fetch_podcasts.py  install.ps1  install.sh  llm_client.py  podcast_batch_summarize.py  podcast_feed_registry.py  podcast_rss_transcribe.py  preflight_public_repo.py  proxy_config.py
skills/pod2wiki/: SKILL.md
tests/: test_preflight_public_repo.py
